--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -4,6 +4,12 @@
 	//background-color: #ffbe70;
 }
 
+nav {
+  .navbar-default {
+    background-color: #990a00 !important;
+  }
+}
+
 body {
 	//background-color: #8e0900;
 	//background-color: #990a00;
