--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -2,20 +2,57 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .chatWrapper {
-	width: 220px;
-	height: 375px;
-	border: 3px solid #f1f1f1;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	width: 320px;
+	height: 440;
+	border: 3px solid #a32219;;
+	z-index: 1000;
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	background-color: #ffd9ab;
 }
 
 #messages {
-	width: 214px;
+	width: 314px;
 	height: 250px;
 	overflow: scroll;
-	border: 3px solid red;
+	border-top: 3px solid #a32219;
+	border-bottom: 3px solid #a32219;
+	word-wrap: break-word;
+	background-color: #fff4e6;
 }
 
 #messageInput {
-	border: 3px solid blue;
+	border-top: 3px solid #a32219;
+	border-bottom: 3px solid #a32219;
 	overflow: scroll;
+	background-color: #ffd9ab;
+}
+
+.expandRow {
+	height: 10px;
+	text-align: right;
+	background-color: #ffd9ab;
+	.glyphicon {
+		color: #333333 !important;
+		font-size: 12px !important;
+	}
+}
+
+.chatRow {
+	width: 314px;
+	height: 25px;
+	background-color: #ffd9ab;
+}
+
+.icon_minim {
+	padding: 2px 10px;
 }
 	
+#mes_input {
+	width: 314px;
+	min-height: 50px;
+	background-color: #fff4e6;
+}
