(styling:nav) changed background color for background of nav

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,7 +1,7 @@
 nav {
 	// background-color: #ffbe70;
 	//background-color: #e67e00;
-	background-color: #990a00 !important;
+	background-color: #e67e00 !important;
 	border: #990a00 !important;
 	//background-color: #8e0900;
 	display: inline-block;
