(styling) changed bar chart colors and jumbotron colors

--- a/app/assets/stylesheets/herbs.scss
+++ b/app/assets/stylesheets/herbs.scss
@@ -3,11 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .bar {
-  fill: #ff5555;
+  //fill: #ff5555;
+  fill: #ad3a32;
 }
 
 .bar:hover {
-	fill: #ff9393;
+	//fill: #ff9393;
+	fill: #990a00;
 }
 
 .tooltip {
