--- a/app/views/herbs/graph_three.html.erb
+++ b/app/views/herbs/graph_three.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Flavonoids content") %>
-<% provide(:p, "This graph represents the measurements of flavonoids content that was gathered from the study of the 68 herbs. Information about what flavonoids content is can be found below the graph. Tap on a bar to learn more about that herb.") %>
+<% provide(:p, "<span style='color: #f4e6e5;'>This graph represents the measurements of flavonoids content that was gathered from the study of the 68 herbs. Information about what flavonoids content is can be found below the graph. Tap on a bar to learn more about that herb.</span>".html_safe) %>
 
 <div class="container">
 	<center>
