--- a/app/views/static_pages/sources.html.erb
+++ b/app/views/static_pages/sources.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Sources") %>
-<% provide(:p, "Listed below are the sources where the data used for this site was obtained.") %>
+<% provide(:p, "<span style='color: #f4e6e5;'>Listed below are the sources where the data used for this site was obtained.</span>".html_safe) %>
 
 <div class="container">
 	
