--- a/app/views/herbs/graph_five.html.erb
+++ b/app/views/herbs/graph_five.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "DPPH Scavenging Capacity") %>
-<% provide(:p, "The DPPH scavenging capacity values of 68 herbs - more information is provided below the graph. Tap on the bars to learn more about the particular bar.") %>
+<% provide(:p, "<span style='color: #f4e6e5;'>The DPPH scavenging capacity values of 68 herbs - more information is provided below the graph. Tap on the bars to learn more about the particular bar.</span>".html_safe) %>
 
 <div class="container">
 	<center>
