--- a/app/views/herbs/graph_four.html.erb
+++ b/app/views/herbs/graph_four.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "FRAP values") %>
-<% provide(:p, "The FRAP values of 68 herbs - more information is provided below the graph. Tap on the bars to learn more about the particular herb displayed.") %>
+<% provide(:p, "<span style='color: #f4e6e5;'>The FRAP values of 68 herbs - more information is provided below the graph. Tap on the bars to learn more about the particular herb displayed.</span>".html_safe) %>
 
 <div class="container">
 	<center>
