--- a/app/views/herbs/graph_two.html.erb
+++ b/app/views/herbs/graph_two.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "68 Herbs") %>
-<% provide(:p, "A collection of research on 68 herbs from the chinese_herbs.csv data set.") %>
+<% provide(:p, "<span style='color: #f4e6e5;'>A collection of research on 68 herbs from the chinese_herbs.csv data set.</span>".html_safe) %>
 
 
 <script>
