--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -6,9 +6,11 @@ nav {
 	//background-color: #8e0900;
 	display: inline-block;
 	width: 100%;
-	color: #000000;
+	//color: #000000;
+	color: #f4e6e5;
 	a {
-		color: #333333;
+		//color: #333333;
+		color: #f4e6e5;
 		font-family: "Helvetica Neue";
 		line-height: 1.428571429;
 		font-size: 16px;
@@ -16,7 +18,8 @@ nav {
 	li {
 		display: inline-block;
 		a {	
-			color: #333333;
+			//color: #333333;
+			color: #f4e6e5;
 			font-family: "Helvetica Neue";
 			line-height: 1.428571429;
 			font-size: 16px;
