--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <%= yield %>
   </body>
 
-<!--div class="chatWrapper">
+<div class="chatWrapper">
   <div class="expandRow">
       <span onclick="onMax()" id="chatMax"class="glyphicon glyphicon-plus"></span>
       <span onclick="onMin()" id="chatMin" class="glyphicon glyphicon-minus"></span>
@@ -62,7 +62,7 @@
 
 <div id="wholeChat">
   <div id="messages">
-    <= render @messages %>
+    <%= render @messages %>
   </div>
 
   <form id="messageInput">
@@ -70,7 +70,7 @@
     <textarea id="mes_input"type="text" placeholder="Type message.." data-behavior="room_speaker"></textarea>
     <p-small>(press enter to send)</p-small>
   </form>
-</div-->
+</div>
 
 </div>
 
